# coral

./: .env.example  .gitignore  Cargo.docker.toml  Cargo.toml  Dockerfile  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy.yml
coral-web/: .env.example  README.md  package-lock.json  package.json
coral-web/src/: middleware.ts
coral-web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
coral-web/src/app/api/hypixel/: route.ts
coral-web/src/app/api/og/player/: route.tsx
coral-web/src/app/api/og/site/: route.tsx
coral-web/src/app/api/ping/: route.ts
coral-web/src/app/api/playerdb/: route.ts
coral-web/src/app/api/top/: route.ts
coral-web/src/app/api/urchin/: route.ts
coral-web/src/app/player/[identifier]/: page.tsx
coral-web/src/app/search/: route.ts
coral-web/src/components/: PlayerHeader.tsx  PlayerNav.tsx  ThemeToggle.tsx
coral-web/src/components/common/: DataTable.tsx  Footer.tsx  LevelingProgress.tsx  ProgressBar.tsx  SearchSuggest.tsx  Stat.tsx  StatDisplay.tsx
coral-web/src/components/panels/: index.ts
coral-web/src/components/panels/gamemodes/: BedwarsPanel.tsx  DuelsPanel.tsx  PitPanel.tsx  QuakePanel.tsx  SkywarsPanel.tsx
coral-web/src/components/panels/pills/: PingPill.tsx  PlayerPills.tsx  UrchinTagPill.tsx
coral-web/src/components/panels/player/: GeneralPanel.tsx  GuildPanel.tsx
coral-web/src/components/panels/shells/: GameModePanelShell.tsx  PillShell.tsx  PlayerPanelShell.tsx  TooltipShell.tsx
coral-web/src/lib/: config.ts
coral-web/src/lib/api/: hypixel.ts  ping.ts  playerdb.ts  urchin.ts
coral-web/src/lib/utils/general/: accessor.ts  colors.tsx  format.ts  index.ts  threshold.ts  validate.ts
coral-web/src/lib/utils/hypixel/gamemodes/bedwars/: index.ts  panel.tsx
coral-web/src/lib/utils/hypixel/gamemodes/duels/: index.ts  panel.tsx
coral-web/src/lib/utils/hypixel/gamemodes/pit/: index.ts
coral-web/src/lib/utils/hypixel/gamemodes/quake/: index.ts
coral-web/src/lib/utils/hypixel/gamemodes/skywars/: index.ts
coral-web/src/lib/utils/hypixel/player/: network.ts  rank.ts
coral-web/src/lib/utils/ping/: index.ts
coral-web/src/lib/utils/server/: internal.ts  popular.ts
coral-web/src/lib/utils/urchin/: index.ts
crates/blacklist/: Cargo.toml
crates/blacklist/src/: lib.rs  rules.rs  scoring.rs
crates/coral-admin/: Cargo.toml
crates/coral-admin/src/: main.rs  state.rs
crates/coral-admin/src/routes/: blacklist.rs  diagnostics.rs  members.rs  mod.rs  rate_limits.rs  snapshots.rs
crates/coral-admin/src/ui/: app.js  index.html  style.css
crates/coral-api/: Cargo.toml
crates/coral-api/src/: cache.rs  discord.rs  error.rs  main.rs  openapi.rs  responses.rs  state.rs
crates/coral-api/src/auth/: mod.rs
crates/coral-api/src/middleware/: mod.rs  rate_limit.rs
crates/coral-api/src/routes/: guild.rs  mod.rs  resolve.rs  session.rs  verify.rs  winstreaks.rs
crates/coral-api/src/routes/batch/: mod.rs
crates/coral-api/src/routes/cubelify/: mod.rs
crates/coral-api/src/routes/player/: mod.rs
crates/coral-api/src/routes/tags/: mod.rs
crates/coral-bot/: Cargo.toml
crates/coral-bot/src/: accounts.rs  api.rs  expr.rs  interact.rs  main.rs  sync.rs
crates/coral-bot/src/commands/: mod.rs
crates/coral-bot/src/commands/admin/: accounts_panel.rs  ban.rs  info.rs  manage.rs  mod.rs  setup.rs  strike.rs
crates/coral-bot/src/commands/blacklist/: channel.rs  evidence.rs  mod.rs  reviews.rs  tag.rs
crates/coral-bot/src/commands/blacklist/reviews/: builder.rs  compose.rs  evidence.rs  mod.rs  state.rs  verdict.rs
crates/coral-bot/src/commands/lists/: manage.rs  mod.rs  subscribe.rs
crates/coral-bot/src/commands/stats/: bedwars.rs  mod.rs  prestiges.rs  session.rs
crates/coral-bot/src/commands/user/: dashboard.rs  help.rs  link.rs  mod.rs  register.rs  unlink.rs  unregister.rs
crates/coral-bot/src/events/: blacklist.rs  mod.rs
crates/coral-bot/src/framework/: mod.rs
crates/coral-bot/src/rendering/: mod.rs
crates/coral-bot/src/rendering/bedwars/: card.rs  layout.rs  mod.rs
crates/coral-bot/src/rendering/common/: colors.rs  format.rs  mod.rs  prestige.rs
crates/coral-bot/src/utils/: minecraft.rs  mod.rs
crates/coral-redis/: Cargo.toml
crates/coral-redis/src/: events.rs  lib.rs  pool.rs  rate_limit.rs  verify.rs
crates/database/: Cargo.toml
crates/database/src/: access.rs  accounts.rs  blacklist.rs  cache.rs  developer_keys.rs  guild_config.rs  lib.rs  members.rs  periods.rs  pool.rs  sessions.rs
crates/hypixel/: Cargo.toml
crates/hypixel/src/: guild.rs  lib.rs  player.rs  stats.rs
crates/hypixel/src/parsing/: bedwars.rs  delta.rs  mod.rs  player.rs  winstreaks.rs
crates/mc-verify/: Cargo.toml
crates/mc-verify/src/: auth.rs  codes.rs  connection.rs  encryption.rs  lib.rs  main.rs  protocol.rs
crates/migration/: Cargo.toml
crates/migration/src/: blacklist.rs  cache.rs  main.rs  members.rs
crates/render/: Cargo.toml
crates/render/src/: icons.rs  lib.rs
crates/render/src/canvas/: canvas.rs  color.rs  context.rs  mod.rs  shape.rs  text.rs
crates/render/src/canvas/shapes/: column.rs  image.rs  mod.rs  rect.rs  row.rs  spacer.rs  text.rs  text_box.rs
crates/render/src/cards/: bedwars.rs  common.rs  mod.rs  prestiges.rs  session.rs
crates/render/src/skin/: mod.rs  output.rs  skin.rs
crates/render/src/skin/model/: mod.rs  parts.rs  pose.rs  uv.rs
crates/render/src/skin/render/: camera.rs  context.rs  mod.rs  pipeline.rs  scene.rs
migrations/: 001_initial.sql  002_tag_history.sql  003_session_markers.sql  004_guild_config.sql  005_unlinked_role.sql  006_access_level.sql  007_snapshot_username_index.sql  008_marker_pinned.sql  009_access_ranks.sql  010_evidence.sql  011_cleanup.sql  012_reputation.sql  013_reviewed_by_array.sql  016_developer_keys.sql
