[workspace]
resolver = "2"
members = [
    "crates/hypixel",
    "crates/blacklist",
    "crates/database",
    "crates/render",
    "crates/coral-api",
    "crates/coral-bot",
    "crates/coral-admin",
    "crates/migration",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Aiden"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "uuid"] }

# Discord
serenity = { git = "https://github.com/serenity-rs/serenity.git", branch = "next", features = ["gateway", "model", "cache", "framework", "builder", "http", "unstable"] }

# Image rendering
image = "0.25"
mctext = "1.3.2"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"

# MongoDB (for migration only)
mongodb = "3"

# Internal crates
hypixel = { path = "crates/hypixel" }
blacklist = { path = "crates/blacklist" }
clients = { git = "https://github.com/Hexze/coral-clients", branch = "master" }
database = { path = "crates/database" }
render = { path = "crates/render" }

# Optimize rendering pipeline in debug builds
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.mctext]
opt-level = 3

[profile.dev.package.fontdue]
opt-level = 3

[profile.dev.package.render]
opt-level = 3
