[package]
name = "coral-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coral-api"
path = "src/main.rs"

[dependencies]
hypixel = { path = "../hypixel" }
clients.workspace = true
database = { path = "../database" }
blacklist = { path = "../blacklist" }
coral-redis = { path = "../coral-redis" }

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
chrono.workspace = true
sqlx.workspace = true
redis.workspace = true
uuid.workspace = true
image.workspace = true

form_urlencoded = "1"

utoipa.workspace = true
utoipa-axum.workspace = true
utoipa-scalar.workspace = true
