[package]
name = "coral-bot"
version.workspace = true
edition.workspace = true

[[bin]]
name = "coral-bot"
path = "src/main.rs"

[dependencies]
hypixel = { path = "../hypixel" }
clients.workspace = true
database = { path = "../database" }
blacklist = { path = "../blacklist" }
coral-redis = { path = "../coral-redis" }
render = { path = "../render" }

serenity.workspace = true
image.workspace = true
mctext.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
thiserror.workspace = true
reqwest.workspace = true
chrono.workspace = true
urlencoding = "2.1.3"
uuid.workspace = true
