[package]
name = "coral-redis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
redis = { workspace = true }
futures-util = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
