[package]
name = "database"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
hypixel = { path = "../hypixel" }
blacklist = { path = "../blacklist" }

sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true
dotenvy = "0.15"
