[package]
name = "migration"
version.workspace = true
edition.workspace = true

[[bin]]
name = "migrate"
path = "src/main.rs"

[dependencies]
database.workspace = true
mongodb.workspace = true
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
